--- a/app/src/main/res/layout/activity_move_google_pixel.xml
+++ b/app/src/main/res/layout/activity_move_google_pixel.xml
@@ -106,6 +106,7 @@
                 tools:ignore="SmallSp" />
 
             <TextView
+                style="@style/TextSpec.Field"
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,6 +117,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
             <TextView
+                style="@style/TextSpec.Value"
                 android:id="@+id/textView18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,6 +127,7 @@
                 app:layout_constraintTop_toTopOf="@+id/textView16" />
 
             <TextView
+                style="@style/TextSpec.Field"
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -135,6 +138,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
             <TextView
+                style="@style/TextSpec.Value"
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -143,6 +147,7 @@
                 app:layout_constraintTop_toTopOf="@+id/textView21" />
 
             <TextView
+                style="@style/TextSpec.Field"
                 android:id="@+id/textView24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -153,6 +158,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
             <TextView
+                style="@style/TextSpec.Value"
                 android:id="@+id/textView25"
                 android:layout_width="261dp"
                 android:layout_height="74dp"
@@ -193,6 +199,7 @@
                 android:id="@+id/button19"
                 android:layout_width="112dp"
                 android:layout_height="46dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/button_background"
                 android:text="@string/beli"
@@ -209,6 +216,7 @@
                 android:layout_width="120dp"
                 android:layout_height="47dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/button_background"
                 android:drawableStart="@drawable/ic_share"
                 android:text="@string/btn_share_channel"
